--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
-  <%- include ("../partials/header.ejs") %>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+    <title>Bubbble Login Portal</title>
+
+
 </head>
-
 <body>
+    <header>
+        <h1>Welcome to Bubbble</h1>
 
-  <%- include ("../partials/nav.ejs") %>
+    </header>
+    <main>
+    <div class="left-column">
+        <h2>What is Bubbble?</h2>
+        <p>Well we are a Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            At eaque voluptate optio tempora explicabo saepe accusamus repellendus impedit, aperiam, neque, 
+            doloremque consequatur quasi iste ratione veniam quaerat eos laborum consequuntur.
+        </p>
+    </div> <!--left column-->
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="/" class="lang-logo">
-      <img src="/lang-logo.png">
-    </a>
-    <h1>Getting Started on Heroku with Node.js</h1>
-    <p>This is a sample Node application deployed to Heroku. It's a reasonably simple app - but a good foundation for understanding how to get the most out of the Heroku platform.</p>
-    <a type="button" class="btn btn-lg btn-default" href="https://devcenter.heroku.com/articles/getting-started-with-nodejs"><span class="glyphicon glyphicon-flash"></span> Getting Started on Heroku with Node.js</a>
-    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/heroku/node-js-getting-started"><span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own copy, and learn the fundamentals of the Heroku platform, head over to the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs" class="alert-link">Getting Started on Heroku with Node.js</a> tutorial.
-  </div>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-info-sign"></span> How this sample app works</h3>
-      <ul>
-        <li>This app was deployed to Heroku, either using Git or by using <a href="https://github.com/heroku/node-js-getting-started">Heroku Button</a> on the repository.</li>
+    <div class="right-column">
 
-        <li>When Heroku received the source code, it fetched all the dependencies in the <a href="https://github.com/heroku/node-js-getting-started/blob/main/package.json">package.json</a>, creating a deployable slug.</li>
-        <li>The platform then spins up a dyno, a lightweight container that provides an isolated environment in which the slug can be mounted and executed.</li>
-        <li>You can scale your app, manage it, and deploy over <a href="https://addons.heroku.com/">150 add-on services</a>, from the Dashboard or CLI.</li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
-      <ul>
-        <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
-        <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
-        <ul>
-          <li><code>git clone https://github.com/heroku/node-js-getting-started.git</code> - this will create a local copy of the source code for the app</li>
-          <li><code>cd node-js-getting-started</code> - change directory into the local source code repository</li>
-          <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
-          <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#push-local-changes">deploy changes</a> to Heroku</li>
-        </ul>
-      </ul>
-      <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
-      <ul>
-        <li><a href="https://www.heroku.com/home">Heroku</a></li>
-        <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started on Heroku with Node.js</a></li>
-        <li><a href="https://devcenter.heroku.com/articles/deploying-nodejs">Deploying Node Apps on Heroku</a></li>
-      </ul>
-    </div>
-  </div> <!-- row -->
-   <div class="alert alert-info text-center" role="alert">
-    Please do work through the Getting Started guide, even if you do know how to build such an application.  The guide covers the basics of working with Heroku, and will familiarize you with all the concepts you need in order to build and deploy your own apps.
-  </div>
-</div>
+        <div class="form-card">
+            <h3>Sign into Bubbble</h3>
+            <form action="/" method="post">
+                <label>Username</label><br>
+                <input required type="text" name="username"><br>
+                <label>Password</label><br>
+                <input required type="password" name="password"><br>
+                <button type="submit">Sign In</button>
+                <input type="hidden" name="action" value="Login">
+            </form>
 
 
+            <h3>Or sign up!</h3>
+            <form action="/accounts/" method="post">
+                <label>First Name*</label><br>
+                <input required type="text" name="fname"><br>
+                <label>Middle Name</label><br>
+                <input type="text" name="mname"><br>
+                <label>Last Name*</label><br>
+                <input required type="text" name="lname"><br>
+
+                <label>Username*</label><br>
+                <input required type="text" name="username"><br>
+                <label>Password*</label><br>
+                <input required type="password" name="password"><br>
+                
+                <label>Reenter Password*</label><br>
+                <input required type="password" name="password2"><br>    
+                
+                <button type="submit">Register</button>
+                <input type="hidden" name="action" value="register">
+            </form>
+            
+        </div> <!--form card-->
+
+    </div> <!--right column-->
+    </main>
 </body>
+
+<footer>
+    <p>&copy; Ethan Tindall 2021 - CSE341: Backend 2 - Project 2</p>
+</footer>
 </html>
+    
