--- a/views/pages/newsfeed.ejs
+++ b/views/pages/newsfeed.ejs
@@ -15,6 +15,7 @@
 <body>
     <header>
         <h1>Bubbble</h1>
+        <p><%= res.rows[0].user_username %></p>
     </header>
     <main>
         <div class="left-column">
