--- a/views/pages/newsfeed.ejs
+++ b/views/pages/newsfeed.ejs
@@ -15,8 +15,11 @@
 <body>
     <header>
         <h1>Bubbble</h1>
-        <p><%= res.rows[0].user_username %></p>
-    </header>
+        <ul>
+            <% results.forEach(function(r) { %>
+                <li><%= r.user_id %> - <%= r.user_username %></li>
+            <% }); %>
+        </ul>    </header>
     <main>
         <div class="left-column">
             <h2>How does Bubbble work?</h2>
