--- a/views/pages/newsfeed.ejs
+++ b/views/pages/newsfeed.ejs
@@ -15,11 +15,7 @@
 <body>
     <header>
         <h1>Bubbble</h1>
-        <ul>
-            <% results.forEach(function(r) { %>
-                <li><%= r.user_id %> - <%= r.user_username %></li>
-            <% }); %>
-        </ul>    </header>
+    </header>
     <main>
         <div class="left-column">
             <h2>How does Bubbble work?</h2>
