--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Welcome to Bubbble</h1>
-
+        <%= message %>
     </header>
     <main>
     <div class="left-column">
