--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,7 +28,7 @@
 
         <div class="form-card">
             <h3>Sign into Bubbble</h3>
-            <form action="/signIn" method="get">
+            <form action="/signIn" method="post">
                 <label>Username</label><br>
                 <input required type="text" name="username"><br>
                 <label>Password</label><br>
