--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -13,6 +13,7 @@
 </head>
 <body class="snowy">
     <header>
+        <img src="Untitled.png" alt="Sun Icon">
         <h1>Welcome to Bubbble</h1>
     </header>
     <main>
@@ -25,7 +26,7 @@
     </div> <!--left column-->
 
     <div class="right-column">
-
+        <%= message %>
         <div class="form-card">
             <h3>Sign into Bubbble</h3>
             <form action="/signIn" method="post">
