--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -31,6 +31,18 @@ main {
             flex-direction: row;
     height: 700px;
   }
+  header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .left-column {
     width: 60%;
     margin: 20px;
