--- a/public/stylesheets/login.scss
+++ b/public/stylesheets/login.scss
@@ -20,6 +20,11 @@ main {
         flex-direction: row;
         height: 700px;
     }
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
     .left-column {
         width: 60%;
         margin: 20px;
