--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -29,3 +29,11 @@ h1 {
 .snowy {
     background-color: $background-snowy;
 }
+
+.bubbble-post {
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 5px;
+    list-style-type: none;
+}
