--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -18,6 +18,8 @@
     </header>
 <body>
 <div class="container">
+    <button onclick="window.history.back()">Go Back</button>
+
 <h2>Database Results</h2>
 
 <ul>
