--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,58 +1,1 @@
-header, footer {
-  text-align: center;
-}
-
-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
-}
-
-.right-column {
-  border: 2px solid black;
-  border-radius: 20px;
-  text-align: center;
-  padding: 10px;
-  width: 80%;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-@media screen and (min-width: 800px) {
-  main {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    height: 700px;
-  }
-  header {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .left-column {
-    width: 60%;
-    margin: 20px;
-  }
-  .right-column {
-    width: 40%;
-    margin: 20px;
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
-  }
-}
-/*# sourceMappingURL=login.css.map */
+/* No CSS *//*# sourceMappingURL=login.css.map */
