--- a/views/pages/control.ejs
+++ b/views/pages/control.ejs
@@ -52,7 +52,7 @@
 
                         </form>
                     </li>
-                    <li class="panels theme" onclick="revealPanel('theme')">
+                    <!--<li class="panels theme" onclick="revealPanel('theme')">
                         <a href="#">Set my theme
                         <img src="/images/sun.png" alt="Select Theme">
                     </a>
@@ -61,7 +61,7 @@
                         <a href="#">Change password
                         <img id="lock" src="/images/lock.png" alt="Change Your Password">
                     </a>
-                    </li>
+                    </li>-->
                     <li><a href="/">Sign Out
                         <img src="/images/door.png" alt="Sign Out">
                     </a>
@@ -82,7 +82,7 @@
                     </form>
                 </div>
                 
-                <!-- location-->
+                <!-- location--
                 <div class="modal-content theme-hidden">
                     <form class="change-location" method="post" action="/changeLocation">
                         <label>Manually Set Theme</label>
@@ -98,9 +98,9 @@
 
                         <button type="submit">Update</button>
                     </form>
-                </div>
+                </div> -->
 
-                <!-- password-->
+                <!-- password--
                 <div class="modal-content password-hidden">
                     <form class="change-location" method="post" action="/changeLocation">
                         <label>Update Password</label>
@@ -110,7 +110,7 @@
                         <input required type="password" placeholder="Reenter Password" name="password2"><br>
                         <button type="submit">Update Password</button>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
     
