--- a/public/stylesheets/control.scss
+++ b/public/stylesheets/control.scss
@@ -32,6 +32,9 @@
         font-size: 1rem;
         color: black;
       }
+      img {
+          cursor: pointer;
+      }
     ul li a {
         font-size: 1rem;
         color: black;
