--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -11,9 +11,9 @@
 
 
 </head>
-<body class="<%= weather %>">
+<body class="Clear">
     <header>
-        <img src="/images/<%= weather %>.png" alt="<%= weather %> Icon">
+        <img src="/images/weather/Clear.png" alt="Sun Icon">
         <h1>Welcome to Bubbble</h1>
     </header>
     <main>
