--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -18,8 +18,9 @@
     </header>
 <body>
 <div class="container">
-    <button onclick="window.history.back()">Go Back</button>
-
+    <form action="/control" method="post">
+        <button type="submit">Go Back</button>
+    </form>
 <h2>Database Results</h2>
 
 <ul>
